--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,7 +1,82 @@
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+    display: block;
+}
+
+body {
+    line-height: 1;
+    overflow: auto;
+    background-image: url(../images/bio-background.png);
+    background-size: cover;
+    box-sizing: inherit;
+    background-color: #f0b64b !important;
+}
+
+ol, ul {
+    list-style: none;
+}
+
+blockquote, q {
+    quotes: none;
+}
+
+blockquote:before, blockquote:after, q:before, q:after {
+    content: '';
+    content: none;
+}
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
 #right {
     float: right;
 }
 
 #left {
     float: left;
+}
+
+.burgerForm {
+    padding: 0px !important;
+    text-align: center;
+    background-color: #f2deb3 !important;
+    border: 0px !important;
+}
+
+.burger {
+    margin-bottom: 8px;
+}
+
+.change-condition{
+    height: 16px;
+    width: 60px;
+    font-size: 10px !important;
+    padding-top: 0px !important;
+}
+
+#burgerImg {
+    height: 200px;
+    width: 200px;
+    margin-top: -20px;
+    margin-bottom: 40px;
+}
+
+.row {
+    margin-bottom: 40px;
+}
+
+.lists{
+    padding-top: 40px;
 }
