--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,28 +1,40 @@
-<h1>Devour that Burger!</h1>
-
-<ul id="left">
-  {{#each burgers}}
-    {{#unless devoured}}
-      {{> burgers/burger-block devoured=false}}
-    {{/unless}}
-  {{/each}}
-</ul>
-
-
-<ul id="right">
-  {{#each burgers}}
-    {{#if devoured}}
-      {{> burgers/burger-block devoured=true}}
-    {{/if}}
-  {{/each}}
-</ul>
-
-<h2>Add a Burger</h2>
-<form class="create-form">
-
-  <div class="form-group">
-    <input type="text" id="burg" name="name" placeholder="Enter your burger of choice">
+<div class="card container burgerForm">
+  <div class="card-header">
+    <h1>Devour that Burger!</h1>
   </div>
+  <div class="card-body">
+    <div class="row" class="burgers">
+      <div id="left" class="col lists">
+        <ul>
+          {{#each burgers}}
+          {{#unless devoured}}
+          {{> burgers/burger-block devoured=false}}
+          {{/unless}}
+          {{/each}}
+        </ul>
+      </div>
+      <div class="col">
+        <img id="burgerImg" src="https://cdn.pixabay.com/photo/2017/02/01/10/17/beef-2029405_960_720.png" alt="burger">
+      </div>
+      <div id="right" class="col lists">
+        <ul>
+          {{#each burgers}}
+          {{#if devoured}}
+          {{> burgers/burger-block devoured=true}}
+          {{/if}}
+          {{/each}}
+        </ul>
+      </div>
+    </div>
 
-  <button type="submit">Add Burger</button>
-</form>
+    <h2>Add a Burger</h2>
+    <form class="create-form" class="row">
+
+      <div class="form-group">
+        <input type="text" id="newBurg" placeholder="Enter your burger">
+      </div>
+
+      <button type="submit" id="submitBtn" class="btn btn-primary btn-sm">Add Burger</button>
+    </form>
+  </div>
+</div>
