--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,8 +1,8 @@
-<li>
-	{{burger_name}}
-
-	<button class="change-condition" data-id="{{this.id}}">
-		{{#if devoured}}{{else}}DEVOUR!{{/if}}
+<li class="burger">
+	{{id}}. {{burger_name}}
+	{{#unless devoured}}
+	<button class="btn btn-danger btn-sm change-condition" data-id="{{this.id}}">
+		DEVOUR!
 	</button>
-
+	{{/unless}}
 </li>
